--- a/local.yml
+++ b/local.yml
@@ -15,3 +15,23 @@
         - tmux
         - zoxide
         - zsh
+  
+  - name: add ansible user
+      user:
+        name: ansible
+        system: yes
+
+  - name: set up sudo for ansible user
+    copy: 
+      src: files/sudoer_ansible
+      dest: /etc/sudoers.d/ansible
+      owner: root
+      group: root
+      mode: 0440
+
+  - name: add ansible-pull cron job
+    cron:
+      name: ansible auto-provision
+      user: ansible
+      minute: "*/10"
+      job: ansible pull -o -U https://github.com/imaginationac/ansible-setup.git
