Try different method to change shell

--- a/local.yml
+++ b/local.yml
@@ -18,8 +18,10 @@
         - zsh
   
   - name: change default shell to zsh
-    ansible.builtin.command: "chsh -s $(which zsh)"
-    become_user: dorian
+    user:
+      name: dorian
+      shell: /usr/bin/zsh
+      state: present
 
   - name: add ansible user
     user:
