--- a/local.yml
+++ b/local.yml
@@ -4,6 +4,13 @@
   connection: local
   become: true
 
+  pre_tasks:
+    - name: update package cache on Debian-based distros
+      ansible.builtin.apt:
+        update_cache: yes
+        state: latest
+      when: ansible_facts['os_family'] == "Debian"
+
   tasks:
   - name: install packages
     package:
