--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -13,10 +13,9 @@ set -g @plugin 'dracula/tmux'
 # See https://draculatheme.com/tmux for documentation
 set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon session
-set -g @dracula-plugins "cpu-usage ram-usage git time"
-#set -g @dracula-git-no-repo-message "(N/A)"
+set -g @dracula-plugins "cpu-usage ram-usage git"
 set -g @dracula-refresh-rate 1
-set -g @dracula-show-timezone false
+set -g @dracula-show-flags true
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
