Add title to tab/window when using tmux

--- a/files/tmux.conf
+++ b/files/tmux.conf
@@ -5,6 +5,10 @@ set -g prefix C-a
 # Use mouse to scroll pane
 set -g mouse on
 
+# Set tab/window title to user@hostname
+set -g set-titles on
+set -g set-titles-string "$USER@$NAME"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
