Fix indentation in inventory file

--- a/hosts.yml
+++ b/hosts.yml
@@ -4,3 +4,9 @@ all:
       hosts:
         pop-os:
           ansible_host: 192.168.0.3
+    servers:
+      hosts:
+          g20:
+            ansible_host: 192.168.0.4
+          raspberrypi:
+            ansible_host: 192.168.0.2
