--- a/local.yml
+++ b/local.yml
@@ -114,4 +114,4 @@
       name: ansible auto-provision
       user: ansible
       minute: "*/10"
-      job: ansible pull -o -U https://github.com/imaginationac/ansible-setup.git
+      job: ansible pull -o -U https://g20:3000/imaginationac/ansible-setup.git
