--- a/hosts.yml
+++ b/hosts.yml
@@ -10,3 +10,6 @@ all:
             ansible_host: 192.168.0.4
           raspberrypi:
             ansible_host: 192.168.0.2
+    desktops:
+      hosts:
+        DESKTOP-3N9VVP9:
