--- a/local.yml
+++ b/local.yml
@@ -130,4 +130,4 @@
         name: ansible auto-provision
         user: ansible
         minute: "*/10"
-        job: ansible pull -o -U https://github.com/imaginationac/ansible-setup.git
+        job: ansible-pull -o -U https://github.com/imaginationac/ansible-setup.git
