--- a/local.yml
+++ b/local.yml
@@ -12,7 +12,7 @@
       when: ansible_facts['os_family'] == "Debian"
 
   tasks:
-    # Rasbian Pi OS does not have the `gh` package by default. Need to add signing key and repo
+    # Raspberry Pi OS does not have the `gh` package by default. Need to add signing key and repo
     - name: add github-cli repo signing key
       ansible.builtin.get_url:
         url: https://cli.github.com/packages/githubcli-archive-keyring.gpg
