--- a/local.yml
+++ b/local.yml
@@ -106,6 +106,8 @@
         version: HEAD
       become_user: dorian
 
+    # TODO: Copy
+
     - name: add ansible user
       user:
         name: ansible
