Add python3-pip package

--- a/local.yml
+++ b/local.yml
@@ -35,6 +35,7 @@
           - gh
           - mosh
           - neovim
+          - python3-pip
           - ripgrep
           - tmux
           - zoxide
