--- a/local.yml
+++ b/local.yml
@@ -103,8 +103,7 @@
       ansible.builtin.git:
         repo: https://github.com/wbthomason/packer.nvim
         dest: /home/dorian/.local/share/nvim/site/pack/packer/start/packer.nvim
-        depth: 1
-        version: HEAD
+        version:
       become_user: dorian
 
     # TODO: Copy neovim configuration files
